updated test structure and did minor changes to data factory