@@ -6,6 +6,8 @@ import dataObjects.pet.updatePet.UpdatePetCategoryRequestResponse;
 import dataObjects.pet.updatePet.UpdatePetTagRequestResponse;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 public class UpdatePetDF {
 
@@ -24,13 +26,13 @@ public class UpdatePetDF {
         data.setCategory(category);
         
         data.setName(faker.animal().name());
-        data.setPhotoUrls(Arrays.asList(faker.internet().url()));
+        data.setPhotoUrls(Collections.singletonList(faker.internet().url()));
         
         // Tag data inline
         UpdatePetTagRequestResponse tag = new UpdatePetTagRequestResponse();
         tag.setId(faker.number().numberBetween(1L, 100L));
         tag.setName(faker.lorem().word());
-        data.setTags(Arrays.asList(tag));
+        data.setTags(List.of(tag));
         
         data.setStatus("available");
 
